fix: overflow in mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -364,7 +364,7 @@ footer a {
   }
   .halloween {
     top: 10px;
-    right: -7px;
+    right: 15px;
   }
   .skeleton {
     left: -14%;
